--- a/web/app/themes/ihc/assets/styles/helpers/_typography.scss
+++ b/web/app/themes/ihc/assets/styles/helpers/_typography.scss
@@ -1,6 +1,7 @@
 // Typography
 h1, h2, h3, h4, h5 {
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
